# hit_vision

./: README.md  pyproject.toml  requirements.txt
src/hit_vision/: __init__.py
src/hit_vision/demo/: __init__.py
src/hit_vision/detect/: __init__.py  yolo_detector.py
src/hit_vision/text/: __init__.py  formatter.py
src/hit_vision/tts/: __init__.py  engine.py
