[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hit-vision"
version = "0.1.0"
description = "On-device obstacle detection with YOLO, depth estimation, and TTS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
  { name = "Hit Vision Team" }
]
keywords = ["yolo", "android", "arcore", "tts", "obstacle"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License"
]

[project.urls]
Homepage = "https://example.com"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

